--- a/xOrdineServizio/Resources/automazione/reportAllegatoA.rdlc
+++ b/xOrdineServizio/Resources/automazione/reportAllegatoA.rdlc
@@ -166,10 +166,10 @@
               <Width>0.74981in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.70995in</Width>
+              <Width>0.68216in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.75216in</Width>
+              <Width>1.64105in</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>1.17846in</Width>
@@ -184,7 +184,7 @@
               <Width>0.27147in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.27149in</Width>
+              <Width>0.21592in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -735,10 +735,10 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>DataSet1</DataSetName>
-        <Top>4.35067cm</Top>
-        <Left>0.2117cm</Left>
+        <Top>4.35064cm</Top>
+        <Left>0.00005cm</Left>
         <Height>0.83784cm</Height>
-        <Width>27.43233cm</Width>
+        <Width>26.93841cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -897,8 +897,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox1</rd:DefaultName>
-        <Top>1.09333cm</Top>
-        <Left>9.12549cm</Left>
+        <Top>1.09331cm</Top>
+        <Left>8.91379cm</Left>
         <Height>0.6cm</Height>
         <Width>9.73697cm</Width>
         <ZIndex>5</ZIndex>
@@ -934,7 +934,7 @@ all'ordine di servizio</Value>
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox1</rd:DefaultName>
-        <Left>24.40666cm</Left>
+        <Left>23.55994cm</Left>
         <Height>0.9266cm</Height>
         <Width>3.23736cm</Width>
         <ZIndex>6</ZIndex>
@@ -1000,10 +1000,10 @@ all'ordine di servizio</Value>
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox1</rd:DefaultName>
-        <Top>1.99319cm</Top>
-        <Left>0.21171cm</Left>
+        <Top>1.99317cm</Top>
+        <Left>0.00001cm</Left>
         <Height>0.63684cm</Height>
-        <Width>27.43232cm</Width>
+        <Width>26.93851cm</Width>
         <ZIndex>7</ZIndex>
         <Style>
           <Border>
@@ -1047,8 +1047,7 @@ all'ordine di servizio</Value>
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox75</rd:DefaultName>
-        <Top>2.63003cm</Top>
-        <Left>0.2117cm</Left>
+        <Top>2.63001cm</Top>
         <Height>1.72064cm</Height>
         <Width>3.48639cm</Width>
         <ZIndex>8</ZIndex>
@@ -1082,8 +1081,8 @@ all'ordine di servizio</Value>
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox75</rd:DefaultName>
-        <Top>2.63003cm</Top>
-        <Left>3.69808cm</Left>
+        <Top>2.63001cm</Top>
+        <Left>3.48638cm</Left>
         <Height>1.72065cm</Height>
         <Width>1.03866cm</Width>
         <ZIndex>9</ZIndex>
@@ -1123,8 +1122,8 @@ all'ordine di servizio</Value>
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox75</rd:DefaultName>
-        <Top>2.63003cm</Top>
-        <Left>4.73675cm</Left>
+        <Top>2.63001cm</Top>
+        <Left>4.52505cm</Left>
         <Height>1.13856cm</Height>
         <Width>5.39628cm</Width>
         <ZIndex>10</ZIndex>
@@ -1158,10 +1157,10 @@ all'ordine di servizio</Value>
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox75</rd:DefaultName>
-        <Top>2.63003cm</Top>
-        <Left>10.13302cm</Left>
+        <Top>2.63001cm</Top>
+        <Left>9.92132cm</Left>
         <Height>0.57354cm</Height>
-        <Width>14.75285cm</Width>
+        <Width>14.40009cm</Width>
         <ZIndex>11</ZIndex>
         <Style>
           <Border>
@@ -1192,8 +1191,8 @@ all'ordine di servizio</Value>
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox75</rd:DefaultName>
-        <Top>3.20358cm</Top>
-        <Left>10.13302cm</Left>
+        <Top>3.20356cm</Top>
+        <Left>9.92132cm</Left>
         <Height>1.1471cm</Height>
         <Width>3.60129cm</Width>
         <ZIndex>12</ZIndex>
@@ -1227,10 +1226,10 @@ all'ordine di servizio</Value>
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox75</rd:DefaultName>
-        <Top>3.20358cm</Top>
-        <Left>13.7343cm</Left>
+        <Top>3.20356cm</Top>
+        <Left>13.5226cm</Left>
         <Height>0.565cm</Height>
-        <Width>3.70779cm</Width>
+        <Width>3.63725cm</Width>
         <ZIndex>13</ZIndex>
         <Style>
           <Border>
@@ -1261,8 +1260,8 @@ all'ordine di servizio</Value>
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox75</rd:DefaultName>
-        <Top>3.76859cm</Top>
-        <Left>13.7343cm</Left>
+        <Top>3.76857cm</Top>
+        <Left>13.5226cm</Left>
         <Height>0.58208cm</Height>
         <Width>1.90453cm</Width>
         <ZIndex>14</ZIndex>
@@ -1295,10 +1294,10 @@ all'ordine di servizio</Value>
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox75</rd:DefaultName>
-        <Top>3.76859cm</Top>
-        <Left>15.63883cm</Left>
+        <Top>3.76857cm</Top>
+        <Left>15.42713cm</Left>
         <Height>0.58208cm</Height>
-        <Width>1.80327cm</Width>
+        <Width>1.73272cm</Width>
         <ZIndex>15</ZIndex>
         <Style>
           <Border>
@@ -1329,10 +1328,10 @@ all'ordine di servizio</Value>
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox75</rd:DefaultName>
-        <Top>3.20358cm</Top>
-        <Left>17.4421cm</Left>
+        <Top>3.20356cm</Top>
+        <Left>17.15985cm</Left>
         <Height>1.1471cm</Height>
-        <Width>4.45049cm</Width>
+        <Width>4.16827cm</Width>
         <ZIndex>16</ZIndex>
         <Style>
           <Border>
@@ -1364,8 +1363,8 @@ all'ordine di servizio</Value>
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox75</rd:DefaultName>
-        <Top>3.20358cm</Top>
-        <Left>21.89259cm</Left>
+        <Top>3.2036cm</Top>
+        <Left>21.32812cm</Left>
         <Height>1.14709cm</Height>
         <Width>2.99328cm</Width>
         <ZIndex>17</ZIndex>
@@ -1399,10 +1398,10 @@ all'ordine di servizio</Value>
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox75</rd:DefaultName>
-        <Top>2.63003cm</Top>
-        <Left>24.88588cm</Left>
+        <Top>2.63001cm</Top>
+        <Left>24.32147cm</Left>
         <Height>0.57354cm</Height>
-        <Width>2.75815cm</Width>
+        <Width>2.61705cm</Width>
         <ZIndex>18</ZIndex>
         <Style>
           <Border>
@@ -1433,8 +1432,8 @@ all'ordine di servizio</Value>
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox75</rd:DefaultName>
-        <Top>3.20358cm</Top>
-        <Left>24.88587cm</Left>
+        <Top>3.2036cm</Top>
+        <Left>24.32144cm</Left>
         <Height>1.14709cm</Height>
         <Width>0.68954cm</Width>
         <ZIndex>19</ZIndex>
@@ -1468,8 +1467,8 @@ all'ordine di servizio</Value>
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox75</rd:DefaultName>
-        <Top>3.20358cm</Top>
-        <Left>25.57541cm</Left>
+        <Top>3.2036cm</Top>
+        <Left>25.01099cm</Left>
         <Height>1.14709cm</Height>
         <Width>0.68951cm</Width>
         <ZIndex>20</ZIndex>
@@ -1503,10 +1502,10 @@ all'ordine di servizio</Value>
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox75</rd:DefaultName>
-        <Top>3.20357cm</Top>
-        <Left>26.26492cm</Left>
-        <Height>1.1471cm</Height>
-        <Width>0.68957cm</Width>
+        <Top>3.20359cm</Top>
+        <Left>25.7005cm</Left>
+        <Height>1.14709cm</Height>
+        <Width>0.68951cm</Width>
         <ZIndex>21</ZIndex>
         <Style>
           <Border>
@@ -1538,8 +1537,8 @@ all'ordine di servizio</Value>
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox75</rd:DefaultName>
-        <Top>3.76858cm</Top>
-        <Left>4.73674cm</Left>
+        <Top>3.76856cm</Top>
+        <Left>4.52504cm</Left>
         <Height>0.58209cm</Height>
         <Width>2.1005cm</Width>
         <ZIndex>22</ZIndex>
@@ -1576,8 +1575,8 @@ all'ordine di servizio</Value>
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox75</rd:DefaultName>
-        <Top>3.76858cm</Top>
-        <Left>6.83725cm</Left>
+        <Top>3.76856cm</Top>
+        <Left>6.62555cm</Left>
         <Height>0.58209cm</Height>
         <Width>1.46018cm</Width>
         <ZIndex>23</ZIndex>
@@ -1611,8 +1610,8 @@ all'ordine di servizio</Value>
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox75</rd:DefaultName>
-        <Top>3.76858cm</Top>
-        <Left>8.29742cm</Left>
+        <Top>3.76856cm</Top>
+        <Left>8.08572cm</Left>
         <Height>0.58209cm</Height>
         <Width>1.8356cm</Width>
         <ZIndex>24</ZIndex>
@@ -1838,10 +1837,10 @@ all'ordine di servizio</Value>
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox75</rd:DefaultName>
-        <Top>3.20357cm</Top>
-        <Left>26.95449cm</Left>
-        <Height>1.1471cm</Height>
-        <Width>0.68954cm</Width>
+        <Top>3.20359cm</Top>
+        <Left>26.39007cm</Left>
+        <Height>1.14709cm</Height>
+        <Width>0.54845cm</Width>
         <ZIndex>26</ZIndex>
         <Style>
           <Border>
@@ -1854,21 +1853,8 @@ all'ordine di servizio</Value>
           <PaddingBottom>2pt</PaddingBottom>
         </Style>
       </Textbox>
-      <Rectangle Name="Rectangle1">
-        <KeepTogether>true</KeepTogether>
-        <Top>5.19783cm</Top>
-        <Left>24.88584cm</Left>
-        <Height>0.74083cm</Height>
-        <Width>2.75816cm</Width>
-        <ZIndex>27</ZIndex>
-        <Style>
-          <Border>
-            <Style>None</Style>
-          </Border>
-        </Style>
-      </Rectangle>
     </ReportItems>
-    <Height>3.43472in</Height>
+    <Height>3.46597in</Height>
     <Style>
       <Border>
         <Style>None</Style>
@@ -1885,10 +1871,10 @@ all'ordine di servizio</Value>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
   </ReportParameters>
-  <Width>11.59626in</Width>
+  <Width>269.38517mm</Width>
   <Page>
     <PageFooter>
-      <Height>1.0034cm</Height>
+      <Height>1.17748cm</Height>
       <PrintOnFirstPage>true</PrintOnFirstPage>
       <PrintOnLastPage>true</PrintOnLastPage>
       <ReportItems>
@@ -1912,9 +1898,9 @@ all'ordine di servizio</Value>
           </Paragraphs>
           <rd:DefaultName>Textbox2</rd:DefaultName>
           <Top>0.14111cm</Top>
-          <Left>19.78237cm</Left>
+          <Left>19.14737cm</Left>
           <Height>0.38833cm</Height>
-          <Width>7.86163cm</Width>
+          <Width>7.64993cm</Width>
           <Style>
             <Border>
               <Style>None</Style>
@@ -1983,7 +1969,6 @@ all'ordine di servizio</Value>
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox2</rd:DefaultName>
-          <Top>0.03528cm</Top>
           <Left>0.3175cm</Left>
           <Height>0.9152cm</Height>
           <Width>17.1246cm</Width>
@@ -2008,7 +1993,7 @@ all'ordine di servizio</Value>
     <PageHeight>21cm</PageHeight>
     <PageWidth>29.7cm</PageWidth>
     <LeftMargin>0.5cm</LeftMargin>
-    <RightMargin>1cm</RightMargin>
+    <RightMargin>0.5cm</RightMargin>
     <TopMargin>0.5cm</TopMargin>
     <BottomMargin>0.5cm</BottomMargin>
     <ColumnSpacing>0.13cm</ColumnSpacing>
